@@ -1,30 +1,47 @@
-/** @file generic/except.i
- * @brief Language independent exception handling.
+# generate-generic-exceptions: generate generic error handling code
+my $copyright = <<'END';
+ Copyright (C) 2004,2005,2006,2007,2011,2012 Olly Betts
+ Copyright (C) 2007 Lemur Consulting Ltd
+
+ This program is free software; you can redistribute it and/or
+ modify it under the terms of the GNU General Public License as
+ published by the Free Software Foundation; either version 2 of the
+ License, or (at your option) any later version.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with this program; if not, write to the Free Software
+ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
+END
+
+use strict;
+use exception_data;
+
+open FD, ">generic/except.i" or die $!;
+
+$copyright =~ s/^/ */mg;
+
+print FD <<"EOF";
+%{
+/** \@file generic/except.i
+ * \@brief Language independent exception handling.
  */
-/* Copyright (C) 2004,2005,2006,2007,2011,2012 Olly Betts
- * Copyright (C) 2007 Lemur Consulting Ltd
+/* Warning: This file is generated by $0
+ * - do not modify directly!
  *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License as
- * published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
- * USA
- */
+$copyright */
 
 /* This file is included for any languages which don't have language specific
  * handling for exceptions.
  */
 
-%{
+EOF
+
+print FD <<'EOF';
 #include <exception>
 
 // Language interface files can #define XapianException before including this
@@ -69,6 +86,14 @@ static int XapianExceptionHandler(string & msg) {
 }
 %}
 
+/* Functions and methods which are marked as "nothrow": */
+EOF
+
+chdir($INC[0]);
+exception_data::for_each_nothrow(sub { print FD "%exception $_[0];\n" });
+
+print FD <<'EOF';
+
 %exception {
     try {
 	$function
@@ -78,3 +103,6 @@ static int XapianExceptionHandler(string & msg) {
 	XapianException(code, msg);
     }
 }
+EOF
+
+close FD or die $!;
